@@ -6,7 +6,7 @@
 CC=	gcc
 CFLAGS=	-Wall -Zcrtdll
 CDEFS=	-DOS2
-COPT=	-O3 -fomit-frame-pointer -fstrength-reduce -Wall -funsigned-char -s
+COPT=	-O3 -fomit-frame-pointer -fstrength-reduce -funsigned-char -s
 LIB=	ar
 
 .SUFFIXES:
