@@ -1,4 +1,9 @@
 ----- cvs ci ------
+Sun Sep 03 19:54:10 NOVST 2000
+max (patches from Pavel Gulchouk):
+* ReplyTo/Reply1st/ReplyNext support ("hpt link" links jam areas now)
+
+----- cvs ci ------
 Tue Aug 29 22:54:10 NOVST 2000
 max (patches from Pavel Gulchouk):
 * great JAM bugfix! (ex: netmail looks good after packing)
